Converted from Jekyll to Hugo and updated for Micro.blog.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
----
-profile: true
-regenerate: true
----
-
 <div class="h-feed">
-{% include post-list.html %}
-{% include footer.html %}
+{{ partial "post-list.html" . }}
+{{ partial "footer.html" . }}
 </div>
